<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- main_menu strings -->

	<string name="app_name">Food Guard</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="main_string">메인화면</string>
	<string name="category_string">카테고리</string>
	<string name="today_nutri_string">오늘의 영양</string>
	<string name="freezer_string">냉동고</string>
	<string name="veget_string">야채실</string>
	<string name="table_string">상온</string>
	<string name="cold_storage_string">냉장고</string>
	<string name="type_string">기간이 1주</string>
	<string name="barcode_string">바코드</string>
	<string name="product_name_string">제품명</string>
	<string name="deadline_string">유통기한(소비기한)</string>
	<string name="remain_time_string">남은 기간</string>
	<string name="remain_food_string">남은 양</string>
	<string name="product_picture_string">사진</string>
	<string name="type_ek1_string">기간이 1주</string>
	<string name="caution1_string">위 조건에 해당하는 제품이 없습니다.</string>
	<string name="caution2_string">아래의 +아이콘을 통해 제품을 등록하세요.</string>
	<string name="cold_storage_name_string">냉장고</string>
	<string name="freezer_name_string">냉동실</string>
	<string name="type1_in_freezer_string">기한이 1주일도 안 남은 제품</string>
	<string name="barcode_in_freezer_string">바코드</string>
	<string name="product_name_in_freezer_string">제품명</string>
	<string name="deadline_in_freezer_string">유통기한(소비기한)</string>
	<string name="remain_time_in_freezer_string">남은 기간</string>
	<string name="remain_food_in_freezer_string">남은 양</string>
	<string name="product_picture_in_freezer_string">사진</string>
	<string name="type2_in_freezer_string">기한이 1주 이상 남은 제품</string>
	<string name="caution1_in_freezer_string">위 조건에 해당하는 제품이 없습니다.</string>
	<string name="caution2_in_freezer_string">아래의 +아이콘을 통해 제품을 등록하세요.</string>
	<string name="veget_name_string">야채실</string>
	<string name="type1_in_veget_string">기한이 1주일도 안 남은 제품</string>
	<string name="barcode_in_veget_string">바코드</string>
	<string name="product_name_in_veget_string">제품명</string>
	<string name="deadline_in_veget_string">유통기한(소비기한)</string>
	<string name="remain_time_in_veget_string">남은 기간</string>
	<string name="remain_food_in_veget_string">남은 양</string>
	<string name="product_picture_in_veget_string">사진</string>
	<string name="type2_in_veget_string">기한이 1주 이상 남은 제품</string>
	<string name="caution1_in_veget_string">위 조건에 해당하는 제품이 없습니다.</string>
	<string name="caution2_in_veget_string">아래의 +아이콘을 통해 제품을 등록하세요.</string>
	<string name="table_name_string">상온</string>
	<string name="type1_in_table_string">기한이 1주일도 안 남은 제품</string>
	<string name="barcode_in_table_string">바코드</string>
	<string name="product_name_in_table_string">제품명</string>
	<string name="deadline_in_table_string">유통기한(소비기한)</string>
	<string name="remain_time_in_table_string">남은 기간</string>
	<string name="remain_food_in_table_string">남은 양</string>
	<string name="product_picture_in_table_string">사진</string>
	<string name="type2_in_table_string">기한이 1주 이상 남은 제품</string>
	<string name="caution1_in_table_string">위 조건에 해당하는 제품이 없습니다.</string>
	<string name="caution2_in_table_string">아래의 +아이콘을 통해 제품을 등록하세요.</string>
	<string name="________string">오늘의 영양</string>
	<string name="__________________________string">[성별]과 [나이]에 맞는 일일 권장 섭취량</string>
	<string name="_______00_00______00_00_________string">현재(당일 00:00 ~ 익일 00:00)까지의 섭취량</string>
	<string name="____kcal__string">열량(kcal)</string>
	<string name="______g__string">탄수화물(g)</string>
	<string name="_____mg__string">나트륨(mg)</string>
	<string name="____g__string">지방(g)</string>
	<string name="_____g__string">단백질(g)</string>
	<string name="___g__string">당(g)</string>
	<string name="____kcal__ek1_string">열량(kcal)</string>
	<string name="______g__ek1_string">탄수화물(g)</string>
	<string name="_____mg__ek1_string">나트륨(mg)</string>
	<string name="____g__ek1_string">지방(g)</string>
	<string name="_____g__ek1_string">단백질(g)</string>
	<string name="___g__ek1_string">당(g)</string>
	<string name="_____________string">국민영양통계 바로가기</string>
	<string name="_____________ek1_string">메인화면으로 돌아가기</string>
	<string name="fatsecret______string">Fatsecret 바로가기</string>
	<string name="_________string">제품 추가하기</string>
	<string name="_____string">제품명</string>
	<string name="__ek1_string">바코드 스캔</string>
	<string name="________ek1_string">제품명 검색</string>
	<string name="input_string">스캔과 검색이 안될 경우 제품명을 적어주세요.</string>
	<string name="input_ek1_string">직접 선택</string>
	<string name="label_string">구매일</string>
	<string name="input_ek2_string">직접 선택</string>
	<string name="label_ek1_string">유통기한(소비기한)</string>
	<string name="input_ek3_string"></string>
	<string name="label_ek2_string">메모</string>
	<string name="_________ek1_string">※알림 설정</string>
	<string name="____________string">알람을 받겠습니까?</string>
	<string name="______string">유통기한</string>
	<string name="____________ek1_string">일 전에 알림설정</string>
	<string name="________ek2_string">알림 시간대</string>
	<string name="_tets_string">음식의 양</string>
	<string name="___________string">영양정보 입력하기</string>
	<string name="overlay_menu_name">식자제 가드(Food Guard)</string>
	<string name="cancelled_text">스캔이 종료됬습니다.</string>
	<string name="msg_token_fmt">Token: %1$s</string>
</resources>